--- a/01-spring-boot-overview/src/main/resources/application.properties
+++ b/01-spring-boot-overview/src/main/resources/application.properties
@@ -2,7 +2,5 @@ spring.application.name=mydemoapp
 coach.name=calvin
 server.port=8000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_dummy
-spring.datasource.username=root
-spring.datasource.password=newpassword
-spring.datasource.driver-class-name=
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
