--- a/01-spring-boot-overview/src/main/resources/application.properties
+++ b/01-spring-boot-overview/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.application.name=mydemoapp
 coach.name=calvin
 server.port=8000
 
-management.endpoints.web.exposure.include=health,info
+# endpoint yang di expose bisa menggunakan wildcard * atau bisa dengan spesifik health,
+management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
+
+info.app.name=My Demo App
+info.app.description=A crazy fun app, hoohooo!!
+info.app.version=1.0.0
