added: security for exposed endpoints (disabled code)
additional:
configuration for excluding some endpoints on

--- a/01-spring-boot-overview/src/main/resources/application.properties
+++ b/01-spring-boot-overview/src/main/resources/application.properties
@@ -6,6 +6,9 @@ server.port=8000
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+# Exclude endpoints yang ingin di exclude dari endpoint yang di expose
+# management.endpoints.web.exposure.exclude=health,info
+
 info.app.name=My Demo App
 info.app.description=A crazy fun app, hoohooo!!
 info.app.version=1.0.0
