added: custom properties implementation

--- a/01-spring-boot-overview/src/main/resources/application.properties
+++ b/01-spring-boot-overview/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=mydemoapp
-coach.name=calvin
+student.name=calvin
 server.port=8000
 
 # endpoint yang di expose bisa menggunakan wildcard * atau bisa dengan spesifik health,
