fixed: improve some used props on application.properties

--- a/01-spring-boot-overview/src/main/resources/application.properties
+++ b/01-spring-boot-overview/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 spring.application.name=mydemoapp
+
+# Define custom props
 student.name=calvin
+
+# Define server port props
 server.port=8000
 
-# endpoint yang di expose bisa menggunakan wildcard * atau bisa dengan spesifik health,
+# Define web actuator exposed endpoint
+## endpoint yang di expose bisa menggunakan wildcard * atau bisa dengan spesifik health,
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
-# Exclude endpoints yang ingin di exclude dari endpoint yang di expose
+## Exclude endpoints yang ingin di exclude dari endpoint yang di expose
 # management.endpoints.web.exposure.exclude=health,info
 
 info.app.name=My Demo App
 info.app.description=A crazy fun app, hoohooo!!
 info.app.version=1.0.0
+
+# Define context-path / used prefix on website
+server.servlet.context-path=/mydemoapp
