added: implement lazy loads spring beans
Notes:
By default lazy loads is disable, so each time spring app runs, it will initialize all beans existed. if using @Lazy, the beans will be initialized when used, or there are a spring.main.lazy-initialization props that can be used to implement lazy loads on every beans including controller

--- a/02-spring-boot-spring-core/src/main/resources/application.properties
+++ b/02-spring-boot-spring-core/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=springcore
+
+# This props will lazy loads all beans including DemoController
+# If this props used, @Lazy on each component can be removed or not use
+# spring.main.lazy-initialization=true
