--- a/03-spring-boot-hibernate-jpa-crud/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=demoapp
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=newpassword
