--- a/03-spring-boot-hibernate-jpa-crud/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=demoapp
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=root
 spring.datasource.password=newpassword
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# Careful when use this on prod env
+# create value will drop all table on entity and create a new one base on entity configuration
+# update value will keep the data on table and update the table
+spring.jpa.hibernate.ddl-auto=update
