--- a/04-spring-boot-rest-crud/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=demoapp
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=root
+spring.datasource.password=
